syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sigurdthor.bookshelf.grpc";
option java_outer_classname = "BookProto";

package book;

service BookService {
    rpc addBook (AddBookRequest) returns (AddBookResponse) {
    }

    rpc getBook (GetBookRequest) returns (BookResponse) {
    }
}

message AddBookRequest {
    string isbn = 1;
    string title = 2;
    repeated string authors = 3;
    string description = 4;
}

message AddBookResponse {
    string addedAt = 1;
}

message BookResponse {
    string isbn = 1;
    string title = 2;
    repeated string authors = 3;
    string description = 4;
}

message GetBookRequest {
    string isbn = 1;
}
